# Assignment4

./: CMakeLists.txt  README.md
cmake/: Dependency.cmake
docs/: Doxyfile.in
input/: assignment4.cfg
src/: CMakeLists.txt  main.cpp
src/poker/: CMakeLists.txt  Card.cpp  Card.h  Hand.cpp  Hand.h  Suit.h
tests/: CMakeLists.txt  CardTests.cpp  HandTests.cpp
